test/objects/bad/objects008.lat
class a {

}

class b {

}

int main() {
	a o = new b;
	return 0;
}
